Fixed errors with buttons.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <!--Title-->
+    
     <!--Title-->
     <div class="container  title">
 
@@ -111,7 +111,7 @@
 
   <section>
 
-
+    <!--section1 -->
     <div class="section-1">
       <h1 class="body text-center"> Features</h1>
       <p class="body-paragraph text-center"> Our aim is to make it quick and easy for you to access your favourite websites.
@@ -143,6 +143,7 @@
       </div>
     </div>
 
+    <!--Section 3-->
     <div class="section-3">
       <div class="container">
         <div class="row">
@@ -163,7 +164,7 @@
       </div>
     </div>
 
-
+    <!--Section 4-->
     <div class="section-4">
       <h4 class="body text-center">Download the extension</h4>
       <p class="body-paragraph text-center"> We’ve got more browsers in the pipeline. Please do let us know if you’ve
@@ -171,6 +172,7 @@
 
     </div>
 
+    <!--Section 5-->
     <div class="section-5">
       <div class="container mt-3">
     <div class="row">
@@ -219,6 +221,7 @@
       </div>
     </div>
 
+    <!--Section 6-->
     <div class="section-6">
       <div class="body text-center">
         Frequently Asked Questions
@@ -326,16 +329,12 @@
       </div>
 
 
-
-
-
-
-
   </section>
 
 
+  <!--Footer-->
   <footer>
-    <ul class="footer-ul">
+    <ul class="footer-ul text-center">
       <li><img class="img" src="images/footer-logo-bookmark.svg" alt=""></li>
       <li class="center">Features</li>
       <li>Pricing</li>
